<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>
    <string name="home">Home</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="loading">loading</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>

<!--    Login and Register Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="take_profile_photo">Take Profile Photo</string>
    <string name="logging_in">Logging in</string>
    <string name="registering">Registering</string>
    <string name="camera_unavailable">Unable to access the camera</string>
    <string name="profile_photo_set">Profile Photo Set!</string>
    <string name="retake_profile_photo">Retake Profile Photo</string>

<!--    Other Strings. I lost track and stopped keeping track -->
    <string name="user_name">%1$s %1$s</string>
    <string name="user_alias">\@%1$s</string>

    <string name="compose_twit">Compose Twit</string>
    <string name="compose_twit_hint">What would you like to say?</string>
    <string name="send_twit">Send</string>
    <string name="sending_twit">Sending Twit</string>
    <string name="sent">Sent!</string>

    <string name="logging_out">Logging out…</string>
    <string name="logged_out_successfully">Logged out successfully!</string>
    <string name="logout_failed">Logout failure</string>

</resources>
